--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ai-sdk/google": "^1.1.25",
     "@hono/node-server": "^1.13.8",
     "dotenv": "^16.4.7",
-    "hono": "^4.7.4"
+    "hono": "^4.7.4",
+    "zod": "^3.24.2"
   }
 }
