--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "system_prop/**/*.ts",
     "server/**/*.ts",
     "client.ts",
-    "structured_outputs/**/*.ts"
+    "structured_outputs/**/*.ts",
+    "enums/**/*.ts",
+    "config/**/*.ts",
     ],         // Include your main.ts file
   "exclude": ["node_modules"]     // Exclude node_modules
 }
